; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_data-convert-bt.c_ctf_stream__delete.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_data-convert-bt.c_ctf_stream__delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctf_stream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ctf_stream*)* @ctf_stream__delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ctf_stream__delete(%struct.ctf_stream* %0) #0 {
  %2 = alloca %struct.ctf_stream*, align 8
  store %struct.ctf_stream* %0, %struct.ctf_stream** %2, align 8
  %3 = load %struct.ctf_stream*, %struct.ctf_stream** %2, align 8
  %4 = icmp ne %struct.ctf_stream* %3, null
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load %struct.ctf_stream*, %struct.ctf_stream** %2, align 8
  %7 = getelementptr inbounds %struct.ctf_stream, %struct.ctf_stream* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @bt_ctf_stream_put(i32 %8)
  %10 = load %struct.ctf_stream*, %struct.ctf_stream** %2, align 8
  %11 = call i32 @free(%struct.ctf_stream* %10)
  br label %12

12:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @bt_ctf_stream_put(i32) #1

declare dso_local i32 @free(%struct.ctf_stream*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
